--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^16.7.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.12",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2"
